--- a/running/public/index.html
+++ b/running/public/index.html
@@ -6,10 +6,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site running"/>
+    <meta name="description" content="Running website"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> 
-    <title>Website running</title>
+    <title>Running website</title>
   </head>
 
   <body>
